--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,7 @@
-*.log
-wp-config.php
-wp-content/advanced-cache.php
-wp-content/backup-db/
-wp-content/backups/
-wp-content/blogs.dir/
-wp-content/cache/
-wp-content/upgrade/
-wp-content/uploads/
-wp-content/mu-plugins/
-wp-content/wp-cache-config.php
-wp-content/plugins/hello.php
-
-/.htaccess
-/license.txt
-/readme.html
-/sitemap.xml
-/sitemap.xml.gz
-
+.cache-loader
+dist
+node_modules
+npm-debug.log
+yarn-error.log
+/vendor
+resources/assets/config-local.json
