--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "illuminate/support": "5.6.*",
     "roots/sage-lib": "~9.0.6",
     "soberwp/controller": "~2.1.0",
-    "mwdelaney/sage-bootstrap4-navwalker": "^1.2"
+    "mwdelaney/sage-bootstrap4-navwalker": "^1.2",
+    "roots/sage-woocommerce": "^1.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
